News
====
* The next Hyperspy training will be on the 24th in Cambridge (UK). See :ref:`trainings`.
* **The Hyperspy development is now open**: We're pleased to announce that Hyperspy now lives in a public repository, see :ref:`developer-zone` for more details.
* **EELSLab is now Hyperspy**. Read why in the :ref:`faq` section.