@@ -1,3 +1,5 @@
+
+
 ********
 Download
 ********
@@ -9,10 +11,10 @@ Stable Releases
 
 Currently there are not stable releases of Hyperspy. 
 
+.. _beta-releases:
+
 Beta Releases
 ================
-
-A Debian/Ubuntu package that requires the latest version (Wheezy and Oneiric respectively) of both OS `can be downloaded here <https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.3.0b1-1_all.deb>`_.
 
 The Windows installer for the current beta 1 release, version 0.3.0b1 can be downloaded using the following links:
 
@@ -24,6 +26,8 @@ The Windows installer for the current beta 1 release, version 0.3.0b1 can be dow
 
 .. WARNING::
     before installing Hyperspy the :ref:`the required libraries must be installed <install-dependencies>`
+
+A Debian/Ubuntu package that requires the latest version (Wheezy and Oneiric respectively) of both OS `can be downloaded here <https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.3.0b1-1_all.deb>`_.
 
 Development version
 ===================
