@@ -120,8 +120,7 @@
 <p>Currently there are not stable releases of Hyperspy.</p>
 </div>
 <div class="section" id="beta-releases">
-<h2>Beta Releases<a class="headerlink" href="#beta-releases" title="Permalink to this headline">¶</a></h2>
-<p>A Debian/Ubuntu package that requires the latest version (Wheezy and Oneiric respectively) of both OS <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.3.0b1-1_all.deb">can be downloaded here</a>.</p>
+<span id="id1"></span><h2>Beta Releases<a class="headerlink" href="#beta-releases" title="Permalink to this headline">¶</a></h2>
 <p>The Windows installer for the current beta 1 release, version 0.3.0b1 can be downloaded using the following links:</p>
 <p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.3.0b1.win32.exe">Hyperspy-0.3.0 beta 1 for Windows 32-bits</a></p>
 <p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.3.0b1.win-amd64.exe">Hyperspy-0.3.0 beta 1 for Windows 64-bits</a></p>
@@ -129,6 +128,7 @@
 <p class="first admonition-title">Warning</p>
 <p class="last">before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/dev/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.3.dev)"><em class="xref std std-ref">the required libraries must be installed</em></a></p>
 </div>
+<p>A Debian/Ubuntu package that requires the latest version (Wheezy and Oneiric respectively) of both OS <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.3.0b1-1_all.deb">can be downloaded here</a>.</p>
 </div>
 <div class="section" id="development-version">
 <h2>Development version<a class="headerlink" href="#development-version" title="Permalink to this headline">¶</a></h2>
