@@ -1,1 +1,1 @@
-Search.setIndex({objects:{},terms:{all:[0,7],code:7,help:0,just:1,show:0,abl:0,hyperspectr:[0,1],move:7,find:[3,7],becaus:1,report:[3,7],calibr:5,through:2,follow:5,yet:[0,7],impact:0,web:[3,7],group:7,execut:5,zone:[0,7,6],how:0,fix:3,send:[3,7],should:7,better:1,window:5,bibliographi:0,requir:5,rich:0,under:0,mail:[3,1,2,7],save:1,analys:1,transit:5,whishlist:7,bin:5,digit:[5,1],evok:1,everi:7,contribut:0,thei:7,format:[5,0,1],python:[0,1],googlegroup:[3,7],faq:[0,3,1,6],devel:7,oneir:5,wheezi:5,"import":[5,0,7],veri:1,join:[3,7],bit:5,now:[0,1,6],discuss:7,hyperpsi:4,cool:1,like:[1,2,7],organ:2,emb:7,did:1,signal:0,list:[3,1,2,7],fernando:5,email:[3,7],"try":3,item:7,princip:0,either:1,have:[3,1,7],team:7,popular:0,found:3,grenobl:2,page:7,librari:5,pleas:[0,3,6],provid:0,work:[0,7],old:1,laboratori:2,some:0,past:2,see:[7,0,1,6],sure:1,design:5,result:0,respect:5,download:[5,7],our:[0,7],beyond:1,zagonel:5,special:0,out:0,googl:[3,7],announc:[0,6],lead:0,eel:0,section:[0,7,6],req:7,particip:2,publish:0,research:0,current:[5,1],written:5,version:[5,3,4,7,1],exit:5,between:5,without:[5,3,7],"new":[0,6],"public":[0,6],mailto:3,encourag:7,run:[2,7],spring:2,lose:5,free:7,standard:[5,1],luiz:5,extens:5,host:7,base:[3,7],here:[5,0],repositori:[0,7,6],ubuntu:5,releas:[5,0],depend:7,strong:7,come:0,sinc:1,both:5,about:7,perform:0,your:[0,3,1,2,7],fit:0,plugin:[5,1],oxford:2,could:3,rippl:[5,1],befor:5,isn:1,chang:1,com:[3,7],think:[3,1],add:5,gatan:1,softwar:[5,1],via:1,directli:5,extra:5,feel:1,articl:0,barcelon:2,independ:0,dataset:0,ask:[5,1],alreadi:0,"24th":[0,2,6],path:5,hyperspi:[0,3,1,5,6,7],stabl:5,guid:[0,7],open:[5,0,1,6],rpl:1,gpl:0,avail:7,git:7,from:7,describ:1,wai:7,"universit\u00e9":2,licens:0,support:[0,3,1],question:[3,1],system:7,been:[0,1,7],next:[0,6],compon:0,live:[0,6],much:1,interest:3,acknowledg:0,txt:7,scope:1,instal:[5,7],hei:1,more:[0,6],"function":0,name:[5,1],agre:1,tool:7,subscrib:[3,7],pari:2,ani:[1,2],warn:5,digitalmicrograph:5,train:[0,3,2,6],link:5,checkout:7,univers:2,compani:2,bug:[3,7],those:7,must:5,reinstal:7,also:[3,7],account:[3,7],"0b1":5,keyword:5,possibl:[1,7],"default":1,type:1,hdf5:1,cambridg:[0,2,6],cite:0,project:[0,1,7],directori:7,below:1,itself:5,can:[5,3,1,7],"export":1,inform:7,clone:7,obtain:0,connect:0,control:7,analysi:[0,1],would:2,prompt:5,want:[3,1,2,7],creat:7,well:[1,7],cea:2,year:2,customis:0,ripl:5,raw:5,pip:7,sourc:0,file:[5,1],cooler:1,octob:2,march:2,revis:0,featur:[0,1,7],check:1,sever:2,packag:[5,1],develop:[0,2,4,5,6,7],goal:1,author:0,soon:0,make:0,when:5,detail:[0,6],same:5,write:[0,1],field:0,need:[3,7],other:[5,0,1],toolbox:0,best:7,which:1,answer:[3,1],easi:[5,0],you:[0,3,1,2,7],document:4,updat:7,grown:1,curv:0,relat:5,extern:7,distribut:7,attend:2,why:[0,1,6],after:7,june:2,multidimension:0,most:[0,1],beta:5,sud:2,user:[0,3,1,7],mai:[3,2],multipl:0,spy:1,data:[5,0,1],eelslab:[0,1,6],welcom:7,forthcom:2,github:7,don:7,favourit:1,scientif:0,read:[0,1,6],doc:[3,1],debian:5,request:7,doe:[0,1],mark:7,importrpl:[5,1],contact:2,thi:[5,0,3,7],time:2,micrograph:[5,1],academ:0,fact:0,latest:5},objtypes:{},titles:["Hyperspy: Hyperspectral data analysis toolbox","FAQ","Trainings","Support","Documentation","Download","News","<strong>Developer Zone</strong>"],objnames:{},filenames:["index","faq","trainings","support","documentation","download","news","developer"]})
+Search.setIndex({objects:{},terms:{all:[0,7],code:7,help:0,just:1,show:0,abl:0,hyperspectr:[0,1],move:7,find:[3,7],becaus:1,report:[3,7],calibr:5,through:2,follow:5,yet:[0,7],impact:0,web:[3,7],group:7,execut:5,zone:[0,7,6],how:0,fix:3,send:[3,7],should:7,better:1,window:5,bibliographi:0,requir:5,rich:0,under:0,mail:[3,1,2,7],save:1,analys:1,transit:5,whishlist:7,bin:5,digit:[5,1],evok:1,everi:7,contribut:0,thei:7,format:[5,0,1],python:[0,1],googlegroup:[3,7],faq:[0,3,1,6],devel:7,oneir:5,wheezi:5,"import":[5,0,7],veri:1,join:[3,7],bit:5,now:[0,1,6],discuss:7,hyperpsi:4,cool:1,like:[1,2,7],organ:2,emb:7,did:1,signal:0,list:[3,1,2,7],fernando:5,email:[3,7],"try":3,item:7,princip:0,either:1,have:[3,1,7],team:7,popular:0,found:3,grenobl:2,page:7,librari:5,pleas:[0,3,6],provid:0,work:[0,7],old:1,laboratori:2,some:0,past:2,see:[7,0,1,6],sure:1,design:5,result:0,respect:5,download:[5,7],our:[0,7],beyond:1,zagonel:5,special:0,out:0,googl:[3,7],announc:[0,6],lead:0,eel:0,section:[0,7,6],req:7,particip:2,publish:0,research:0,current:[5,1],written:5,version:[0,1,3,4,5,6,7],exit:5,between:5,without:[5,3,7],"new":[0,6],"public":[0,6],mailto:3,encourag:7,run:[2,7],spring:2,lose:5,free:7,standard:[5,1],luiz:5,extens:5,host:7,base:[3,7],here:[5,0],repositori:[0,7,6],ubuntu:5,releas:[5,0,6],depend:7,strong:7,come:0,sinc:1,both:5,about:7,perform:0,your:[0,3,1,2,7],fit:0,plugin:[5,1],oxford:2,could:3,rippl:[5,1],befor:5,isn:1,chang:1,com:[3,7],think:[3,1],add:5,first:[0,6],gatan:1,softwar:[5,1],via:1,directli:5,extra:5,feel:1,articl:0,barcelon:2,independ:0,dataset:0,ask:[5,1],alreadi:0,"24th":[0,2,6],path:5,hyperspi:[0,3,1,5,6,7],stabl:5,guid:[0,7],open:[5,0,1,6],rpl:1,gpl:0,avail:7,git:7,from:7,describ:1,wai:7,"universit\u00e9":2,licens:0,support:[0,3,1],question:[3,1],system:7,been:[7,0,1,6],next:[0,6],compon:0,live:[0,6],much:1,interest:3,acknowledg:0,txt:7,scope:1,instal:[5,7],hei:1,more:[0,6],"function":0,name:[5,1],agre:1,tool:7,subscrib:[3,7],pari:2,ani:[1,2],warn:5,digitalmicrograph:5,train:[0,3,2,6],link:5,checkout:7,univers:2,compani:2,bug:[3,7],those:7,must:5,reinstal:7,also:[3,7],account:[3,7],"0b1":5,keyword:5,possibl:[1,7],"default":1,type:1,hdf5:1,cambridg:[0,2,6],cite:0,project:[0,1,7],directori:7,below:1,itself:5,can:[5,3,1,7],"export":1,inform:7,clone:7,obtain:0,connect:0,control:7,analysi:[0,1],would:2,prompt:5,want:[3,1,2,7],creat:7,well:[1,7],cea:2,year:2,customis:0,ripl:5,raw:5,pip:7,sourc:0,file:[5,1],cooler:1,octob:2,march:2,revis:0,featur:[0,1,7],check:1,sever:2,packag:[5,1],develop:[0,2,4,5,6,7],goal:1,author:0,soon:0,make:0,when:5,detail:[0,6],same:5,write:[0,1],field:0,need:[3,7],other:[5,0,1],toolbox:0,best:7,which:1,answer:[3,1],easi:[5,0],you:[0,3,1,2,7],document:4,updat:7,grown:1,curv:0,relat:5,extern:7,distribut:7,attend:2,why:[0,1,6],after:7,june:2,multidimension:0,most:[0,1],beta:[5,0,6],sud:2,user:[0,3,1,7],mai:[3,2],multipl:0,spy:1,data:[5,0,1],eelslab:[0,1,6],welcom:7,forthcom:2,github:7,don:7,favourit:1,scientif:0,read:[0,1,6],doc:[3,1],debian:5,request:7,doe:[0,1],mark:7,importrpl:[5,1],contact:2,thi:[5,0,3,7],time:2,micrograph:[5,1],academ:0,fact:0,latest:5},objtypes:{},titles:["Hyperspy: Hyperspectral data analysis toolbox","FAQ","Trainings","Support","Documentation","Download","News","<strong>Developer Zone</strong>"],objnames:{},filenames:["index","faq","trainings","support","documentation","download","news","developer"]})
